Enforce list return objects max length limit
